[tool.poetry]
name = "ups"
version = "0.1.0"
description = ""
authors = ["rodbell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.11.2"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.40"


[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.9.0.20241206"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
