[tool.poetry]
name = "ups"
version = "0.1.0"
description = ""
authors = ["rodbell"]
readme = "README.md"
packages = [{ include = "ups", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.11.2"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.40"
aiohttp = "^3.11.16"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.9.0.20241206"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
ruff = "^0.11.4"
flake8 = "^7.2.0"
pytest = "^8.3.5"
responses = "^0.25.7"
aioresponses = "^0.7.8"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
